# aa-it2

./: README.md  pyproject.toml
cfg/task/: A2Game.yaml  G1Game.yaml
src/it2/: __init__.py  commands.py  terrain.py  utils.py
src/it2_learning/: __init__.py
